--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutterando_analysis: ^0.0.1
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
